# esyn

./: Cargo.toml  README.md  full.rs  push.zsh
.github/workflows/: ci.yml
crates/esyn/: Cargo.toml  full.rs
crates/esyn-derive/: Cargo.toml
crates/esyn-derive/src/: attr.rs  bound.rs  de.rs  default.rs  ders.rs  ders_enum_named.rs  ders_enum_unit.rs  ders_enum_unnamed.rs  ders_struct_named.rs  ders_struct_unit.rs  ders_struct_unnamed.rs  lib.rs  ser.rs
crates/esyn/examples/: box.rs  custom_syntax.rs  dev.rs  dev_derive_attr.rs  dev_derive_attr2.rs  dev_setting_alias.rs  main.rs
crates/esyn/src/: auto.rs  bytes.rs  error.rs  ext.rs  func.rs  lib.rs  parser.rs  utils.rs  visit.rs
crates/esyn/src/auto/: custom_syntax.rs  default.rs  ders.rs  mut_path.rs  ser.rs  wrap.rs
crates/esyn/src/ext/: _fast_image_resize.rs  btree_map.rs  byte_str.rs  duration.rs  hash_map.rs  ip_addr.rs  path_buf.rs
crates/esyn/tests/: enum.rs  enum_custom_syntax.rs  ext_ip.rs  ext_map.rs  ext_path_buf.rs  fn.rs  misc.rs  readme.rs  struct.rs  struct_custom_syntax.rs  test.rs  type.rs
examples/: main.rs
src/: auto.rs  bytes.rs  error.rs  ext.rs  lib.rs  main.rs  parse.rs  parser.rs
src/ext/: _fast_image_resize.rs
tests/: ext_fast_image_resize.rs  test.rs
