[package]
name = "esyn"
version = "0.2.2"
edition = "2021"
authors = ["RSUU <rsuuyu@gmail.com>"]
description = "Rusty Config File Parser."
homepage = "https://crates.io/crates/esyn"
repository = "https://github.com/rsuu/esyn"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["config","parser"]
categories = ["encoding"]
exclude = ["examples/", ".gitignore", ".github/","tests/"]

[dependencies]
esyn-derive = { path="./crates/esyn-derive" }

byteorder = "1.4.3"
syn = { version = "2.0.15", features = ["extra-traits", "full"] }
thiserror = "1.0.40"
fast_image_resize = {version="2.7.3", optional = true}


[features]
default = []
full = []
ext_fast_image_resize = ["dep:fast_image_resize"]

[profile.release]
lto = "thin"

[workspace]
members = ["crates/*"]
