[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["RSUU <rsuuyu@gmail.com>"]
description = "Rusty Config File Parser."
homepage = "https://crates.io/crates/esyn"
repository = "https://github.com/rsuu/esyn"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["config","parser"]
categories = ["encoding"]
exclude = ["examples/", ".gitignore", ".github/","tests/"]

[workspace.dependencies]
syn = { version = "2.0.18", features = ["extra-traits", "full"] }
