[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.8.2"
edition = "2021"
authors = ["RSUU <rsuuyu@gmail.com>"]
description = "De/Serialization Rust In Rust."
homepage = "https://crates.io/crates/esyn"
repository = "https://github.com/rsuu/esyn"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["config", "serialization", "deserialization", "parser"]
categories = ["encoding"]
exclude = ["examples/", ".gitignore", ".github/", "tests/"]

[workspace.dependencies]
esyn-derive = { version = "0.8.2", path = "./crates/esyn-derive" }
syn = { version = "2.0.48", features = ["extra-traits", "visit"] }
quote = "1.0.35"
proc-macro2 = "1.0"
