[package]
name = "esyn"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
esyn-derive = { version = "0.4.0", path="../esyn-derive"}
syn.workspace = true
byteorder = "1.4.3"
thiserror = "1.0.40"
fast_image_resize = { version = "2.7.3", optional = true}

[features]
default = []
full = ["ext_fast_image_resize"]
ext_fast_image_resize = ["dep:fast_image_resize"]
