[package]
name = "esyn"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]

[dependencies]
esyn-derive.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
thiserror = "1.0.56"
prettyplease = "0.2.16"

[features]
default = []
